--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
                                 Projects
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-controller="Projects" asp-action="Projects">Action</a>
-                                <a class="dropdown-item" asp-controller="Projects" asp-action="Projects">Another action</a>
+                                <a class="dropdown-item" asp-controller="Projects" asp-action="Projects">All Projects</a>
+                                <a class="dropdown-item" asp-controller="Bookings" asp-action="BookingsHomePage">Bookings Project</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" asp-controller="Projects" asp-action="Projects">Something else here</a>
                             </div>
@@ -55,6 +55,7 @@
             &copy; 2023 - Portfolio - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/121c73f1c7.js" crossorigin="anonymous"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
