--- a/Portfolio/Views/_ViewImports.cshtml
+++ b/Portfolio/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using Portfolio
+
 @using Portfolio.Models
+@using Portfolio.Models.BookingsModels
+
+@using Portfolio.ViewModels
+@using Portfolio.ViewModels.BookingsViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
