--- a/Portfolio/Views/_ViewImports.cshtml
+++ b/Portfolio/Views/_ViewImports.cshtml
@@ -6,4 +6,6 @@
 @using Portfolio.ViewModels
 @using Portfolio.ViewModels.BookingsViewModels
 
+@using Portfolio.Data
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
