--- a/Portfolio/wwwroot/css/site.css
+++ b/Portfolio/wwwroot/css/site.css
@@ -17,6 +17,7 @@ html {
 html {
   position: relative;
   min-height: 100%;
+    
 }
 
 body {
@@ -61,4 +62,12 @@ header {
 
 .employee-card {
     margin: 25px;
+}
+
+
+/* -- Admin Page CSS --*/
+#adminEmployeesList th,
+#adminEmployeesList td {
+    white-space: nowrap;
+    width: 1%;
 }
