--- a/Portfolio/Views/Admin/AdminEmployeesPage.cshtml
+++ b/Portfolio/Views/Admin/AdminEmployeesPage.cshtml
@@ -10,12 +10,12 @@
     <div class="d-flex justify-content-between align-items-center">
         <h3 class="">Employee List</h3>
         <div class="p-3 text-dark">
-            <button type="button" class="btn btn-success" data-toggle="ajax-modal" data-target="#addEmployeeModal" asp-controller="Admin" asp-action="CreateNewEmployee">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addEmployeeModal">
                 <i class="fa-solid fa-square-plus fa-xl"></i> Add Employee
             </button>
         </div>
     </div>
-    
+
     <table class="table table-responsive table-striped w-100" id="adminEmployeesList">
         <thead>
             <tr class="w-auto">
@@ -39,13 +39,16 @@
                     <td class="w-auto">Services?</td>
                     <td class="w-auto">Schedules?</td>
                     <td>
-                        <a class="m-1 btn btn-warning">Edit Employee</a>
+                        <a class="m-1 btn btn-warning" data-bs-toggle="modal" data-bs-target="@("#editEmployeeModal-"+e.EmployeeId)" data-bs-url="@Url.Action($"EditEmployee/{e.EmployeeId}")">Edit Employee</a>
+                        @await Html.PartialAsync("~/Views/Admin/_EditEmployeePartialView.cshtml", e)
+                        
                         <a class="m-1 btn btn-danger">Delete Employee</a>
                     </td>
                 </tr>
             }
-         </tbody>
+        </tbody>
     </table>
 </div>
 
-@*@await Html.PartialAsync("_AddEmployeePartialView", new Employee())*@
+
+@await Html.PartialAsync("~/Views/Admin/_AddEmployeePartialView.cshtml", new Employee())
