--- a/Portfolio/Views/Admin/_EditEmployeePartialView.cshtml
+++ b/Portfolio/Views/Admin/_EditEmployeePartialView.cshtml
@@ -3,11 +3,11 @@
 
 }
 
-<div class="modal fade" id="addEmployeeModal" tabindex="-1" role="dialog" aria-labelledby="addEmployeeLabel" aria-hidden="true">
+<div class="modal fade" id="editEmployeeModal-@Model.EmployeeId" tabindex="-1" role="dialog" aria-labelledby="editEmployeeLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addEmployeeLabel">Add New Employee</h5>
+                <h5 class="modal-title" id="editEmployeeLabel">Edit Employee</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"></span>
                 </button>
@@ -16,7 +16,6 @@
                 <form asp-controller="Admin" asp-action="CreateNewEmployee" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group my-1">
-                        <input type="hidden" asp-for="EmployeeId" />
                         <label asp-for="FirstName" class="">First Name</label>
                         <input asp-for="FirstName" class="form-control" placeholder="Enter First Name">
                         <span asp-validation-for="FirstName" class="text-danger"></span>
@@ -34,24 +33,19 @@
                     <fieldset class="form-group row my-3">
                         <legend class="col-form-label col-sm-4 pt-0">Employee Gender</legend>
                         <div class="col-sm-8">
-                            <div class="form-check form-check-inline">
-                                <input asp-for="Gender" class="form-check-input" type="radio" name="Gender" id="newEmployeeGender_Male" value="1">
-                                <label asp-for="Gender" class="form-check-label">Male</label>
+                            @foreach (var e in System.Enum.GetValues(typeof(gender)).OfType<gender>())
+                            {
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" asp-for="Gender" class="form-check-input" name="Gender" value="@((int)e)" checked="@(e == Model?.Gender)" />
+                                    <label asp-for="Gender" class="form-check-label">@e</label>
+                                </div>
+                            }
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input asp-for="Gender" class="form-check-input" type="radio" name="Gender" id="newEmployeeGender_Female" value="2">
-                                <label asp-for="Gender" class="form-check-label">Female</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input asp-for="Gender" class="form-check-input" type="radio" name="Gender" id="newEmployeeGender_Unspecified" value="3">
-                                <label asp-for="Gender" class="form-check-label">Unspecified</label>
-                            </div>
-                        </div>
                         <span asp-validation-for="Gender" class="text-danger"></span>
                     </fieldset>
                     <div class="form-group row my-3">
                         <div class="col-sm-4">Give Admin Rights?</div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-8">
                             <div class="form-check">
                                 <input asp-for="HasAdminRights" class="form-check-input" type="checkbox" id="gridCheck1">
                                 <label asp-for="HasAdminRights" class="form-check-label" for="gridCheck1">
