--- a/Portfolio/Views/Admin/_EditEmployeePartialView.cshtml
+++ b/Portfolio/Views/Admin/_EditEmployeePartialView.cshtml
@@ -13,8 +13,9 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form asp-controller="Admin" asp-action="CreateNewEmployee" method="post">
+                <form asp-controller="Admin" asp-action="EditEmployee" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="@Model.EmployeeId" />
                     <div class="form-group my-1">
                         <label asp-for="FirstName" class="">First Name</label>
                         <input asp-for="FirstName" class="form-control" placeholder="Enter First Name">
@@ -40,7 +41,7 @@
                                     <label asp-for="Gender" class="form-check-label">@e</label>
                                 </div>
                             }
-                            </div>
+                        </div>
                         <span asp-validation-for="Gender" class="text-danger"></span>
                     </fieldset>
                     <div class="form-group row my-3">
@@ -56,7 +57,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Add Employee</button>
+                        <button type="submit" class="btn btn-warning">Edit Employee</button>
                     </div>
                 </form>
             </div>
