--- a/Portfolio/Views/Bookings/ChooseEmployee.cshtml
+++ b/Portfolio/Views/Bookings/ChooseEmployee.cshtml
@@ -24,7 +24,7 @@
                 {
                     <div class="col-5 col-sm-5 col-md-5 col-lg-3 employee-card">
                         <div class="card">
-                            <img class="card-img-top" src="#" alt="@e.FirstName Picture" />
+                            @*<img class="card-img-top" src="#" alt="@e.FirstName Picture" />*@
                             <div class="card-body">
                                 <div class="employee-header d-flex justify-content-between">
                                     <h4 class="card-title">@e.FirstName @e.LastName</h4>
