Deleted all existing migrations, dropped the database, created a SEED class to fill new database, and created new JOIN models.

--- a/Portfolio/Views/Admin/AdminServicesPage.cshtml
+++ b/Portfolio/Views/Admin/AdminServicesPage.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Service>
+﻿@model ICollection<Service>
 @{
     ViewData["Title"] = "AdminServicesPage";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
