--- a/Portfolio/Views/Admin/AdminEmployeesPage.cshtml
+++ b/Portfolio/Views/Admin/AdminEmployeesPage.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeeViewModel
+﻿@model IEnumerable<EmployeeViewModel>
 @{
     ViewData["Title"] = "AdminEmployeesPage";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -29,26 +29,26 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var e in Model.Employees)
+            @foreach (var e in Model)
             {
                 <tr class="w-auto align-middle">
-                    <td class="w-auto">@e.FirstName</td>
-                    <td class="w-auto">@e.LastName</td>
-                    <td class="w-auto">@e.EmailAddress</td>
-                    <td class="w-auto">@e.Gender</td>
+                    <td class="w-auto">@e.Employee.FirstName</td>
+                    <td class="w-auto">@e.Employee.LastName</td>
+                    <td class="w-auto">@e.Employee.EmailAddress</td>
+                    <td class="w-auto">@e.Employee.Gender</td>
                     <td class="w-auto">
-                        <a class="m-1 btn" data-bs-toggle="modal" data-bs-target="@("#employeeServicesModal-"+e.EmployeeId)" data-bs-url="@Url.Action($"EditEmployeeServices/{e.EmployeeId}")">
+                        <a class="m-1 btn" data-bs-toggle="modal" data-bs-target="@("#employeeServicesModal-" + e.Employee.EmployeeId)" data-bs-url="@Url.Action($"EditEmployeeServices/{e.Employee.EmployeeId}")">
                             <i class="fa-solid fa-book-open-reader fa-xl"></i>
                         </a>
                         @await Html.PartialAsync("~/Views/Admin/_EmployeeServicesPartialView.cshtml", e)
                     </td>
                     <td class="w-auto">Schedules?</td>
                     <td>
-                        <a class="m-1 btn btn-warning" data-bs-toggle="modal" data-bs-target="@("#editEmployeeModal-"+e.EmployeeId)" data-bs-url="@Url.Action($"EditEmployee/{e.EmployeeId}")">Edit Employee</a>
-                        @await Html.PartialAsync("~/Views/Admin/_EditEmployeePartialView.cshtml", e)
+                        <a class="m-1 btn btn-warning" data-bs-toggle="modal" data-bs-target="@("#editEmployeeModal-" + e.Employee.EmployeeId)" data-bs-url="@Url.Action($"EditEmployee/{e.Employee.EmployeeId}")">Edit Employee</a>
+                        @await Html.PartialAsync("~/Views/Admin/_EditEmployeePartialView.cshtml", e.Employee)
 
-                        <a class="m-1 btn btn-danger" data-bs-toggle="modal" data-bs-target="@("#deleteEmployeeModal-"+e.EmployeeId)" data-bs-url="@Url.Action($"DeleteEmployee/{e.EmployeeId}")">Delete Employee</a>
-                        @await Html.PartialAsync("~/Views/Admin/_DeleteEmployeePartialView.cshtml", e)
+                        <a class="m-1 btn btn-danger" data-bs-toggle="modal" data-bs-target="@("#deleteEmployeeModal-" + e.Employee.EmployeeId)" data-bs-url="@Url.Action($"DeleteEmployee/{e.Employee.EmployeeId}")">Delete Employee</a>
+                        @await Html.PartialAsync("~/Views/Admin/_DeleteEmployeePartialView.cshtml", e.Employee)
                     </td>
                 </tr>
             }
