--- a/Portfolio/Views/Admin/_EditEmployeePartialView.cshtml
+++ b/Portfolio/Views/Admin/_EditEmployeePartialView.cshtml
@@ -1,9 +1,9 @@
-﻿@model Employee
+﻿@model EmployeeViewModel
 @{
 
 }
 
-<div class="modal fade" id="editEmployeeModal-@Model.EmployeeId" tabindex="-1" role="dialog" aria-labelledby="editEmployeeLabel" aria-hidden="true">
+<div class="modal fade" id="editEmployeeModal-@Model.Employee.EmployeeId" tabindex="-1" role="dialog" aria-labelledby="editEmployeeLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -15,21 +15,21 @@
             <div class="modal-body">
                 <form asp-controller="Admin" asp-action="EditEmployee" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <input type="hidden" asp-for="@Model.EmployeeId" />
+                    <input type="hidden" asp-for="@Model.Employee.EmployeeId" />
                     <div class="form-group my-1">
-                        <label asp-for="FirstName" class="">First Name</label>
-                        <input asp-for="FirstName" class="form-control" placeholder="Enter First Name">
-                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                        <label asp-for="Employee.FirstName" class="">First Name</label>
+                        <input asp-for="Employee.FirstName" class="form-control" placeholder="Enter First Name">
+                        <span asp-validation-for="Employee.FirstName" class="text-danger"></span>
                     </div>
                     <div class="form-group my-1">
-                        <label asp-for="LastName" class="">Last Name</label>
-                        <input asp-for="LastName" class="form-control" placeholder="Enter First Name">
-                        <span asp-validation-for="LastName" class="text-danger"></span>
+                        <label asp-for="Employee.LastName" class="">Last Name</label>
+                        <input asp-for="Employee.LastName" class="form-control" placeholder="Enter First Name">
+                        <span asp-validation-for="Employee.LastName" class="text-danger"></span>
                     </div>
                     <div class="form-group my-1">
-                        <label asp-for="EmailAddress" class="">Email Address</label>
-                        <input asp-for="EmailAddress" class="form-control" placeholder="Enter Email Address">
-                        <span asp-validation-for="EmailAddress" class="text-danger"></span>
+                        <label asp-for="Employee.EmailAddress" class="">Email Address</label>
+                        <input asp-for="Employee.EmailAddress" class="form-control" placeholder="Enter Email Address">
+                        <span asp-validation-for="Employee.EmailAddress" class="text-danger"></span>
                     </div>
                     <fieldset class="form-group row my-3">
                         <legend class="col-form-label col-sm-4 pt-0">Employee Gender</legend>
@@ -37,19 +37,19 @@
                             @foreach (var e in System.Enum.GetValues(typeof(gender)).OfType<gender>())
                             {
                                 <div class="form-check form-check-inline">
-                                    <input type="radio" asp-for="Gender" class="form-check-input" name="Gender" value="@((int)e)" checked="@(e == Model?.Gender)" />
-                                    <label asp-for="Gender" class="form-check-label">@e</label>
+                                    <input type="radio" asp-for="Employee.Gender" class="form-check-input" name="Gender" value="@((int)e)" checked="@(e == Model?.Employee.Gender)" />
+                                    <label asp-for="Employee.Gender" class="form-check-label">@e</label>
                                 </div>
                             }
                         </div>
-                        <span asp-validation-for="Gender" class="text-danger"></span>
+                        <span asp-validation-for="Employee.Gender" class="text-danger"></span>
                     </fieldset>
                     <div class="form-group row my-3">
                         <div class="col-sm-4">Give Admin Rights?</div>
                         <div class="col-sm-8">
                             <div class="form-check">
-                                <input asp-for="HasAdminRights" class="form-check-input" type="checkbox" id="gridCheck1">
-                                <label asp-for="HasAdminRights" class="form-check-label" for="gridCheck1">
+                                <input asp-for="Employee.HasAdminRights" class="form-check-input" type="checkbox" id="gridCheck1">
+                                <label asp-for="Employee.HasAdminRights" class="form-check-label" for="gridCheck1">
                                     Yes
                                 </label>
                             </div>
