--- a/Portfolio/Views/Admin/_EmployeeServicesPartialView.cshtml
+++ b/Portfolio/Views/Admin/_EmployeeServicesPartialView.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<div class="modal fade" id="employeeServicesModal-@Model.EmployeeId" tabindex="-1" role="dialog" aria-labelledby="editEmployeeServicesLabel" aria-hidden="true">
+<div class="modal fade" id="employeeServicesModal-@Model.Employee.EmployeeId" tabindex="-1" role="dialog" aria-labelledby="editEmployeeServicesLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -15,16 +15,24 @@
             <div class="modal-body">
                 <form asp-controller="Admin" asp-action="EditEmployee" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <input type="hidden" asp-for="@Model.EmployeeId" />
+                    <input type="hidden" asp-for="@Model.Employee.EmployeeId" />
                     <div class="form-group my-1">
-                        @foreach (var e in Model.Services)
+                        @foreach (var e in Model.AllServices)
                         {
-                            <div class="col-sm-2">
-                                <div class="form-check">
-                                    <input asp-for="@e.ServiceName" class="form-check-input" type="checkbox" id="gridCheck1">
-                                    <label asp-for="@e.ServiceName" class="form-check-label" for="gridCheck1"></label>
+                            @if (Model.Employee.EmployeeServices == null)
+                            {
+                                <p>This employee is currently not signed up for any services.</p>
+                            }
+                            else
+                            {
+                                <div class="col-sm-4">
+                                    <div class="form-check">
+                                        <input asp-for="Employee.EmployeeServices" class="form-check-input" type="checkbox" id="@e.ServiceId">
+                                        <label asp-for="Employee.EmployeeServices" class="form-check-label" for="gridCheck1"></label>
+                                    </div>
                                 </div>
-                            </div>
+                            }
+                            
                             <div class="col-sm-8">
                                 @e.ServiceName
                             </div>
