--- a/Portfolio/Views/Admin/AdminEmployeesPage.cshtml
+++ b/Portfolio/Views/Admin/AdminEmployeesPage.cshtml
@@ -38,17 +38,17 @@
                     <td class="w-auto">@e.Employee.Gender</td>
                     <td class="w-auto">
                         <a class="m-1 btn" data-bs-toggle="modal" data-bs-target="@("#employeeServicesModal-" + e.Employee.EmployeeId)" data-bs-url="@Url.Action($"EditEmployeeServices/{e.Employee.EmployeeId}")">
-                            <i class="fa-solid fa-book-open-reader fa-xl"></i>
+                            <i class="fa-solid fa-book-open-reader fa-xl"></i> Services
                         </a>
                         @await Html.PartialAsync("~/Views/Admin/_EmployeeServicesPartialView.cshtml", e)
                     </td>
                     <td class="w-auto">Schedules?</td>
                     <td>
                         <a class="m-1 btn btn-warning" data-bs-toggle="modal" data-bs-target="@("#editEmployeeModal-" + e.Employee.EmployeeId)" data-bs-url="@Url.Action($"EditEmployee/{e.Employee.EmployeeId}")">Edit Employee</a>
-                        @await Html.PartialAsync("~/Views/Admin/_EditEmployeePartialView.cshtml", e.Employee)
+                        @await Html.PartialAsync("~/Views/Admin/_EditEmployeePartialView.cshtml", e)
 
                         <a class="m-1 btn btn-danger" data-bs-toggle="modal" data-bs-target="@("#deleteEmployeeModal-" + e.Employee.EmployeeId)" data-bs-url="@Url.Action($"DeleteEmployee/{e.Employee.EmployeeId}")">Delete Employee</a>
-                        @await Html.PartialAsync("~/Views/Admin/_DeleteEmployeePartialView.cshtml", e.Employee)
+                        @await Html.PartialAsync("~/Views/Admin/_DeleteEmployeePartialView.cshtml", e)
                     </td>
                 </tr>
             }
